--- a/paradigm-shift/assets/sass/layout/_wrapper.scss
+++ b/paradigm-shift/assets/sass/layout/_wrapper.scss
@@ -190,7 +190,7 @@
 				grid-template-columns: 50vw 50vw;
 				grid-template-rows: 1fr;
 
-				&:first-child {
+				&:first-of-type {
 					margin-top: 0;
 				}
 
